--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "Kartik Rawat",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.44",
     "typescript": "^4.0.5"
   },
-  "dependencies": {
-    "@types/node": "^14.14.6"
-  }
+  "dependencies": {}
 }
