--- a/package.json
+++ b/package.json
@@ -13,5 +13,20 @@
     "@types/node": "^14.14.44",
     "typescript": "^4.0.5"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "config",
+    "config-management",
+    "simple-config",
+    "simple-config-management",
+    "environment"
+  ],
+  "bugs": {
+    "url": "https://github.com/kartik1998/confm/issues"
+  },
+  "homepage": "https://github.com/kartik1998/confm#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kartik1998/confm.git"
+  }
 }
