Add: package description

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "confn",
   "version": "1.0.1",
   "main": "build/index.js",
+  "description": "A simple to implement config management node js library. Setup dev, staging, production, etc. config for your node app effortlessly.",
   "scripts": {
     "start": "node build/index.js",
     "compile": "tsc -p tsconfig.json",
